# RentMate-protocol

./: .gitignore  README.md  syncFiles.sh
helpers/: pckAnalyzer.py
mainserver/MainServerOld/: commandHandlesServer.c  commandHandlesServer.h  compile_commands.json  controlSocketThread.c  controlSocketThread.h  makefile  server.c  server.h  settings.conf  timingThread.c  timingThread.h  util.c  util.h
mainserver/mainServer/: CMakeLists.txt  broadcastThread.c  broadcastThread.h  commands.c  commands.h  compile_commands.json  deviceInfos.json  epollRecievingThread.c  epollRecievingThread.h  makefile  server.c  server.h  serverConfig.json  webSocketThread.c  webSocketThread.h
misc/AES-GCM/: aes-gcm.c  compile_commands.json  makefile
misc/ArrayList/: arrayList.c  arrayList.h  compile_commands.json  makefile
misc/tinyECDH/: makefile
nodeClient/mainClient/: CMakeLists.txt  client.c  client.h  compileFlag.h  makefile  socketThread.c  socketThread.h
nodeClient/mainClient/commands/sharedCommands/: sharedCommands.c
nodeClient/mainClient/commands/smartLock/: commands.c  commands.h
nodeClient/mainClient_bak/: client.c  client.h  compileFlag.h  socketThread.h
nodeClient/test/: client.c  client.h  compile_commands.json  makefile  settings.conf  socketThread.c  socketThread.h
nodeClient/testEsp32/: CMakeLists.txt  Makefile  partitionConfig.csv  sdkconfig  sdkconfig.old
nodeClient/testEsp32/components/AES-GCM/: CMakeLists.txt  aes-gcm.c  aes-gcm.h
nodeClient/testEsp32/components/ArrayList/: CMakeLists.txt  arrayList.c  arrayList.h
nodeClient/testEsp32/components/pckData/: CMakeLists.txt  commands.c  commands.h  generalSettings.h  pckData.c  pckData.h
nodeClient/testEsp32/components/tinyECDH/: CMakeLists.txt  ecdh.c
nodeClient/testEsp32/main/: CMakeLists.txt  client.c  client.h  clientTmp.c  clientTmp.h  compileFlag.h  socketThread.c  socketThread.h  station_example_main.c
nodeClient/testEsp32/main/backup/: client.h_bak
nodeClient/testEsp32/main/noiseMonitor/: noiseMonitorCore.c  noiseMonitorCore.h
nodeClient/testEsp32/main/sharedCommands/: sharedCommands.h
nodeClient/testEsp32/main/smartLock/: matrixKeyboard.c  matrixKeyboard.h  matrixKeyboard2.c  matrixKeyboard2.h  smartLockCore.c  smartLockCore.h
nodeClient/testEsp32/spiffFolder/: nodeSettings.conf
protocol/pckData/: commands.c  commands.h  compile_commands.json  generalSettings.h  makefile  pckData.c  pckData.h
protocol/pckData/GPUCache/: data_1
protocol/pckData/test/: testPckData.c
protocol/pckData_bak/: pckData.h
protocol/pckData_bak/GPUCache/: index
testing/cmdMsgSender/: cmdMsgSender.c  makefile
testing/msgSender/: commandHandlesReserved.h  makefile  msgSender.c  msgSender.h
(+13 files in other folders)
